<resources>
    <string name="app_name">Cruddy Pizza</string>
    <string name="new_order">New Order</string>
    <string name="order_history">Order History</string>
    <string name="main_menu">Main Menu</string>
    <string name="size">Size</string>
    <string name="topping">Toppings (Choose 1–3)</string>
    <string name="customer_name">Customer Name</string>
    <string name="submit">Submit Order</string>
    <string name="update">Update Order</string>
    <string name="order_details">Order Details</string>
    <string name="delete">Delete Order</string>
    <string name="language">FR</string>
    <string name="order_submitted">Order Submitted.</string>
    <string name="order_updated">Order updated.</string>
    <string name="order_deleted">Order deleted.</string>
    <string name="validation_error">Not all required fields are filled out.</string>
    <string name="update_failed">Failed to update order.</string>
    <string name="order_failed">Failed to create order.</string>
    <string name="delete_failed">Failed to delete order.</string>
    <string name="read_failed">Failed to read orders from database.</string>

    <string-array name="size_list">
        <item>--Choose an Option--</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-Large</item>
    </string-array>

    <string-array name="topping_list">
        <item>--Choose an Option--</item>
        <item>Cheese</item>
        <item>Pepperoni</item>
        <item>Onion</item>
    </string-array>
</resources>